# hello.service

./: Cargo.toml  Readme.md
debian/: hello.service
debian/scripts/: postinst  postrm  prerm
src/: main.rs
